--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://levuvietphong.github.io/"
+baseURL: "https://levuvietphong.github.io/ess-ai-ml/"
 languageCode: en-us
 title: AI/ML for ESS
 theme: ["PaperMod"]
