--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://levuvietphong.github.io/ess-ai-ml/"
+baseURL: "https://ess-aiml.github.io/blogs/"
 languageCode: en-us
 title: AI/ML for ESS
 theme: ["PaperMod"]
