--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,99 +1,60 @@
-name: Build and deploy
+name: Redirect to new site
+
 on:
     push:
         branches:
             - main
+            - master
     workflow_dispatch:
+
 permissions:
     contents: read
     pages: write
     id-token: write
+
 concurrency:
-    group: pages
-    cancel-in-progress: false
-defaults:
-    run:
-        shell: bash
+    group: "pages"
+    cancel-in-progress: true
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        env:
-            DART_SASS_VERSION: 1.93.2
-            GO_VERSION: 1.25.1
-            HUGO_VERSION: 0.151.0
-            NODE_VERSION: 22.18.0
-            TZ: Europe/Oslo
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v5
-              with:
-                  submodules: true
-                  fetch-depth: 0
-            - name: Setup Go
-              uses: actions/setup-go@v5
-              with:
-                  go-version: ${{ env.GO_VERSION }}
-                  cache: false
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ env.NODE_VERSION }}
-            - name: Setup Pages
-              id: pages
-              uses: actions/configure-pages@v5
-            - name: Create directory for user-specific executable files
-              run: |
-                  mkdir -p "${HOME}/.local"
-            - name: Install Hugo
-              run: |
-                  curl -sLJO "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
-                  mkdir "${HOME}/.local/hugo"
-                  tar -C "${HOME}/.local/hugo" -xf "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
-                  rm "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
-                  echo "${HOME}/.local/hugo" >> "${GITHUB_PATH}"
-            - name: Verify installations
-              run: |
-                  echo "Dart Sass: $(sass --version)"
-                  echo "Go: $(go version)"
-                  echo "Hugo: $(hugo version)"
-                  echo "Node.js: $(node --version)"
-            - name: Install Node.js dependencies
-              run: |
-                  [[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true
-            - name: Configure Git
-              run: |
-                  git config core.quotepath false
-            - name: Cache restore
-              id: cache-restore
-              uses: actions/cache/restore@v4
-              with:
-                  path: ${{ runner.temp }}/hugo_cache
-                  key: hugo-${{ github.run_id }}
-                  restore-keys: hugo-
-            - name: Build the site
-              run: |
-                  hugo \
-                    --gc \
-                    --minify \
-                    --baseURL "${{ steps.pages.outputs.base_url }}/" \
-                    --cacheDir "${{ runner.temp }}/hugo_cache"
-            - name: Cache save
-              id: cache-save
-              uses: actions/cache/save@v4
-              with:
-                  path: ${{ runner.temp }}/hugo_cache
-                  key: ${{ steps.cache-restore.outputs.cache-primary-key }}
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: ./public
     deploy:
         environment:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
-        needs: build
         steps:
+            - name: Create redirect file
+              run: |
+                  mkdir -p public
+                  cat > public/index.html <<'EOF'
+                  <!DOCTYPE html>
+                  <html lang="en">
+                  <head>
+                    <meta charset="UTF-8">
+                    <meta http-equiv="refresh" content="0; url=https://esscommunity.org/aiml-blogs/">
+                    <link rel="canonical" href="https://esscommunity.org/aiml-blogs/">
+                    <title>Redirecting…</title>
+                  </head>
+                  <body>
+                    <p>Redirecting to <a href="https://esscommunity.org/aiml-blogs/">the new blog</a>…</p>
+                    <script>
+                      const base = "https://esscommunity.org/aiml-blogs/";
+                      // Remove any leading "/blogs" or trailing slashes before appending
+                      let path = window.location.pathname
+                        .replace(/^\/blogs\/?/, "")  // remove leading /blogs/
+                        .replace(/^\/+/, "");        // remove any extra slashes
+                      const newURL = base + (path ? path : "") + window.location.search + window.location.hash;
+                      window.location.replace(newURL);
+                    </script>
+                  </body>
+                  </html>
+                  EOF
+
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  path: ./public
+
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
